[gd_scene load_steps=10 format=3 uid="uid://d7lrdbhgf8ic"]

[ext_resource type="PackedScene" uid="uid://c3gl0aagqxsg8" path="res://entities/blocks/bonus_block.tscn" id="1_7dhwb"]
[ext_resource type="Script" uid="uid://ctyefshd3k1j4" path="res://entities/blocks/hammer_bonus_block.gd" id="2_2e8qh"]
[ext_resource type="Texture2D" uid="uid://cbqgt34wr2on3" path="res://assets/blocks/hammer-bonus-hex.png" id="3_y2jl6"]
[ext_resource type="Texture2D" uid="uid://cpr7y80pxkil6" path="res://assets/blocks/hammer-icon.png" id="4_flgn5"]
[ext_resource type="Texture2D" uid="uid://iupeedscjhgo" path="res://assets/blocks/hammer-particle.png" id="5_755hm"]
[ext_resource type="Material" uid="uid://kbimjfdgmplr" path="res://resources/burst_particles.tres" id="6_y6756"]

[sub_resource type="Animation" id="Animation_yt4sm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HammerIconSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aoboi"]
resource_name = "swing"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HammerIconSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.4835298, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h353g"]
_data = {
&"RESET": SubResource("Animation_yt4sm"),
&"swing": SubResource("Animation_aoboi")
}

[node name="HammerBonusBlock" instance=ExtResource("1_7dhwb")]
scale = Vector2(0.8, 0.8)
script = ExtResource("2_2e8qh")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_y2jl6")

[node name="HammerIconSprite" type="Sprite2D" parent="." index="3"]
texture = ExtResource("4_flgn5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_h353g")
}
autoplay = "swing"

[node name="HammerParticles2D" type="GPUParticles2D" parent="." index="5"]
emitting = false
amount = 16
texture = ExtResource("5_755hm")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = ExtResource("6_y6756")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
